# era-gp-sim

./: .travis.yml  CMakeLists.txt
include/arch/common/: abstract-arithmetic-node-factory.hpp  abstract-immediate-node-factory.hpp  abstract-instruction-node-factory.hpp  abstract-node-factory-collection.hpp  abstract-register-access-node-factory.hpp  abstract-register-node.hpp  abstract-syntax-tree-node.hpp  architecture-properties.hpp  architecture.hpp  extension-information.hpp  information.hpp  instruction-key.hpp  instruction-set.hpp  register-information.hpp  (+1 more)
include/common/: optional-replacement.hpp  optional.hpp  utility.hpp
include/core/: conversions.hpp  memory-value.hpp  project.hpp  snapshot.hpp
include/parser/: riscv-regex.hpp
include/ui/: gui-project.hpp  snapshot-component.hpp  snapshotmodel.hpp  ui.hpp
source/arch/riscv/: CMakeLists.txt  formats.cpp  riscv-immediate-node-factory.cpp  riscv-instruction-node-factory.cpp  riscv-register-access-node-factory.cpp
source/common/: utility.cpp
source/core/: memory-value.cpp  project-module.cpp  project.cpp  snapshot.cpp
source/parser/: riscv-regex.cpp
source/ui/: CMakeLists.txt  SplitviewItem.qml  gui-project.cpp  main.qml  qml.qrc  snapshot-component.cpp  ui.cpp
source/ui/Components/Memory/: MemoryComponent.qml
source/ui/Components/Menubar/: Menubar.qml
source/ui/Components/Output/: Output.qml  OutputSettingsWindow.qml
source/ui/Components/Snapshot/: SnapshotList.qml  main.cpp  snapshotmodel.cpp
source/ui/Components/Toolbar/: ToolbarMainWindow.qml
tests/core/: memory-value-test.cpp
tests/parser/: syntax-tree-generator-test.cpp
(+14 files in other folders)
